--- a/PAMcss.css
+++ b/PAMcss.css
@@ -12,4 +12,5 @@ a:hover:not(.active) {
     width: 100%;
     height: 100%;
     border: 2px, solid, rgb(0, 238, 255);
+    background-color: blue;
 }
