--- a/PAMcss.css
+++ b/PAMcss.css
@@ -2,6 +2,7 @@ div{
 width: 100%;
 height: 100%;
 border: 2px, solid, black;
+text-algin: center;
 }
 a {
 width: 100%;
@@ -11,6 +12,6 @@ border: 2px, solid, black;
 a:hover:not(.active) {
     width: 100%;
     height: 100%;
-    border: 2px, solid, rgb(0, 238, 255);
+    border: 2px, solid, black;
     background-color: blue;
 }
