--- a/Pagina de Auto Presentación/CV/PAMcv.css
+++ b/Pagina de Auto Presentación/CV/PAMcv.css
@@ -77,7 +77,7 @@ a{
 a.FU:hover:not(.active) {
     color: rgb(0, 255, 255);
 }
-div.Presentacion {
+th.Presentacion {
     background-color:rgb(0, 0, 255);
     height:650px;
     width:25%;
@@ -98,7 +98,7 @@ img.icono {
     background-color: white;
     border: 2px solid black;
 }
-div.EducacionyFormacion {
+th.EducacionyFormacion {
     padding: 10px;
     float: left;
     width:75%;
@@ -108,7 +108,7 @@ h2.background {
     background-color: blue;
     padding-left: 5px;
 }
-div.Idiomas {
+th.Idiomas {
     padding: 10px;
     float: left;
     width:75%;
@@ -122,11 +122,11 @@ ul.IdiomaUL {
 li.IdiomaLI {
     text-align: center;
     display: inline-block;
-    width: 19.5%;
+    width: 19%;
 }
 li.IdiomaLIB {
     text-align: center;
     display: inline-block;
-    width: 19.5%;
+    width: 19%;
     background-color: rgb(0, 255, 255);
 }
